force-app/main/default/objects/Complaint_Escalation_Matrix__c/Complaint_Escalation_Matrix__c.object-meta.xml
<CustomObject>
    <description>Configurable escalation matrix for customer complaints. Defines multi-level escalation rules based on priority, category, and overdue thresholds.</description>
    <label>Complaint Escalation Matrix</label>
    <nameField>
        <displayFormat>CEM-{0000}</displayFormat>
        <label>Escalation Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Escalation Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>