force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Auto_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically reassign the complaint to the escalation target at each level</description>
    <label>Auto Reassign on Escalation</label>
    <type>Checkbox</type>
</CustomField>