force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_1_Days__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Days overdue to trigger Level 1 escalation (e.g., notify assigned team lead)</description>
    <label>Level 1 - Days Overdue</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>