force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_1_Notify__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Notify__c</fullName>
    <defaultValue>&quot;Assigned To&quot;</defaultValue>
    <description>Who to notify at Level 1. Options: Assigned To, Owner, Project Head, Custom User</description>
    <label>Level 1 - Notify</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned To</fullName>
                <default>true</default>
                <label>Assigned To</label>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Project Head</fullName>
            </value>
            <value>
                <fullName>Custom User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>