force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_1_User__c.field-meta.xml
<CustomField>
    <fullName>Level_1_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom user to notify at Level 1 (when Level 1 Notify = Custom User)</description>
    <label>Level 1 - Custom User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>L1_Escalation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>