force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_2_Days__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Days__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Days overdue to trigger Level 2 escalation (e.g., notify department manager)</description>
    <label>Level 2 - Days Overdue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>