force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_2_Notify__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Notify__c</fullName>
    <description>Who to notify at Level 2</description>
    <label>Level 2 - Notify</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned To</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Project Head</fullName>
                <default>true</default>
                <label>Project Head</label>
            </value>
            <value>
                <fullName>Custom User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>