force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_2_User__c.field-meta.xml
<CustomField>
    <fullName>Level_2_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom user to notify at Level 2 (when Level 2 Notify = Custom User)</description>
    <label>Level 2 - Custom User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>L2_Escalation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>