force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Days__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Days overdue to trigger Level 3 escalation (e.g., notify senior management)</description>
    <label>Level 3 - Days Overdue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>