force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Level_3_User__c.field-meta.xml
<CustomField>
    <fullName>Level_3_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom user to notify at Level 3 (when Level 3 Notify = Custom User)</description>
    <label>Level 3 - Custom User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>L3_Escalation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>