force-app/main/default/objects/Complaint_Escalation_Matrix__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific project this rule applies to. Leave blank to apply to all projects.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Escalation Rules</relationshipLabel>
    <relationshipName>Escalation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>